--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"eslint-config-prettier": "^8.5.0",
 		"gulp": "^4.0.2",
 		"gulp-autoprefixer": "^8.0.0",
+		"gulp-cache": "^1.1.3",
 		"gulp-cheerio": "^1.0.0",
 		"gulp-concat": "^2.6.1",
 		"gulp-csso": "^4.0.1",
