--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"pub": "gulp final",
 		"jade": "gulp pug",
 		"json": "gulp json",
+		"sprite": "gulp sprite",
 		"svg": "gulp svg",
 		"clear": "gulp clear",
 		"task": "gulp --tasks"
@@ -67,6 +68,7 @@
 		"gulp-strip-css-comments": "^2.0.0",
 		"gulp-svg-sprite": "^2.0.3",
 		"gulp-svgmin": "^4.1.0",
+		"gulp-svgstore": "^9.0.0",
 		"gulp-ttf2woff2": "^4.0.1",
 		"gulp-webp": "^4.0.1",
 		"gulp-webp-css": "^1.1.0",
