--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"@babel/preset-env": "^7.23.2",
 		"@babel/register": "^7.18.9",
 		"@types/jest": "^29.5.12",
+		"babel-preset-react": "^6.24.1",
 		"browser-sync": "^2.27.10",
 		"css-loader": "^6.10.0",
 		"eslint-config-prettier": "^9.1.0",
